--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jade": "~1.6.0",
     "mongoose": "^3.8.17",
     "morgan": "~1.3.0",
+    "python-shell": "0.0.3",
     "serve-favicon": "~2.1.3"
   }
 }
